@@ -194,6 +194,10 @@ extern int set_select_jobinfo(select_jobinfo_t *jobinfo,
 			jobinfo->dim_cnt = SYSTEM_DIMENSIONS;
 
 		jobinfo->ionode_str = xstrdup(tmp_char);
+		for (i=0; i<jobinfo->dim_cnt; i++) {
+			jobinfo->start_loc[i] =
+				select_char2coord(jobinfo->ionode_str[i]);
+		}
 		break;
 	case SELECT_JOBDATA_NODE_CNT:
 		jobinfo->cnode_cnt = *uint32;
